packages/svelte/tests/compiler-errors/samples/runes-wrong-props-args/_config.js
import { test } from '../../test';

export default test({
	error: {
		code: 'invalid-rune-args-length',
		message: '$props can only be called with 0 arguments'
	}
});
